exports[`no-new-buffer > invalid(1): const modes = new Set(['foo']);\nmodes.clear();\nnew Buffer(modes.size ? 'x' : 1); 1`] = `

  1 | const modes = new Set(['foo']);
  2 | modes.clear();
  3 | new Buffer(modes.size ? 'x' : 1);

`;

exports[`no-new-buffer > invalid(1): const modes = new Set(['foo']);\nmodes.clear();\nnew Buffer(modes.size ? 'x' : 1); 2`] = `

Message:
  1 | const modes = new Set(['foo']);
  2 | modes.clear();
> 3 | new Buffer(modes.size ? 'x' : 1);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`new Buffer()\` is deprecated, use \`Buffer.alloc()\` or \`Buffer.from()\` instead.

Suggestion 1/2: Switch to \`Buffer.from()\`.:
  1 | const modes = new Set(['foo']);
  2 | modes.clear();
  3 | Buffer.from(modes.size ? 'x' : 1);

Suggestion 2/2: Switch to \`Buffer.alloc()\`.:
  1 | const modes = new Set(['foo']);
  2 | modes.clear();
  3 | Buffer.alloc(modes.size ? 'x' : 1);

`;

exports[`no-new-buffer > invalid(10): const arrayBuffer = new ArrayBuffer(10);\nconst buffer = new Buffer(arrayBuffer, 0, ); 1`] = `

  1 | const arrayBuffer = new ArrayBuffer(10);
  2 | const buffer = new Buffer(arrayBuffer, 0, );

`;

exports[`no-new-buffer > invalid(10): const arrayBuffer = new ArrayBuffer(10);\nconst buffer = new Buffer(arrayBuffer, 0, ); 2`] = `

Message:
  1 | const arrayBuffer = new ArrayBuffer(10);
> 2 | const buffer = new Buffer(arrayBuffer, 0, );
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`new Buffer()\` is deprecated, use \`Buffer.from()\` instead.

Output:
  1 | const arrayBuffer = new ArrayBuffer(10);
  2 | const buffer = Buffer.from(arrayBuffer, 0, );

`;

exports[`no-new-buffer > invalid(11): const arrayBuffer = new ArrayBuffer(10);\nconst buffer = new Buffer(arrayBuffer, 0, 2); 1`] = `

  1 | const arrayBuffer = new ArrayBuffer(10);
  2 | const buffer = new Buffer(arrayBuffer, 0, 2);

`;

exports[`no-new-buffer > invalid(11): const arrayBuffer = new ArrayBuffer(10);\nconst buffer = new Buffer(arrayBuffer, 0, 2); 2`] = `

Message:
  1 | const arrayBuffer = new ArrayBuffer(10);
> 2 | const buffer = new Buffer(arrayBuffer, 0, 2);
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`new Buffer()\` is deprecated, use \`Buffer.from()\` instead.

Output:
  1 | const arrayBuffer = new ArrayBuffer(10);
  2 | const buffer = Buffer.from(arrayBuffer, 0, 2);

`;

exports[`no-new-buffer > invalid(12): const buffer = new Buffer(10); 1`] = `

  1 | const buffer = new Buffer(10);

`;

exports[`no-new-buffer > invalid(12): const buffer = new Buffer(10); 2`] = `

Message:
> 1 | const buffer = new Buffer(10);
    |                ^^^^^^^^^^^^^^ \`new Buffer()\` is deprecated, use \`Buffer.alloc()\` instead.

Output:
  1 | const buffer = Buffer.alloc(10);

`;

exports[`no-new-buffer > invalid(13): const size = 10;\nconst buffer = new Buffer(size); 1`] = `

  1 | const size = 10;
  2 | const buffer = new Buffer(size);

`;

exports[`no-new-buffer > invalid(13): const size = 10;\nconst buffer = new Buffer(size); 2`] = `

Message:
  1 | const size = 10;
> 2 | const buffer = new Buffer(size);
    |                ^^^^^^^^^^^^^^^^ \`new Buffer()\` is deprecated, use \`Buffer.alloc()\` instead.

Output:
  1 | const size = 10;
  2 | const buffer = Buffer.alloc(size);

`;

exports[`no-new-buffer > invalid(14): new Buffer(foo.length) 1`] = `

  1 | new Buffer(foo.length)

`;

exports[`no-new-buffer > invalid(14): new Buffer(foo.length) 2`] = `

Message:
> 1 | new Buffer(foo.length)
    | ^^^^^^^^^^^^^^^^^^^^^^ \`new Buffer()\` is deprecated, use \`Buffer.alloc()\` instead.

Output:
  1 | Buffer.alloc(foo.length)

`;

exports[`no-new-buffer > invalid(15): new Buffer(Math.min(foo, bar)) 1`] = `

  1 | new Buffer(Math.min(foo, bar))

`;

exports[`no-new-buffer > invalid(15): new Buffer(Math.min(foo, bar)) 2`] = `

Message:
> 1 | new Buffer(Math.min(foo, bar))
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`new Buffer()\` is deprecated, use \`Buffer.alloc()\` instead.

Output:
  1 | Buffer.alloc(Math.min(foo, bar))

`;

exports[`no-new-buffer > invalid(16): const buffer = new Buffer(\"string\"); 1`] = `

  1 | const buffer = new Buffer("string");

`;

exports[`no-new-buffer > invalid(16): const buffer = new Buffer(\"string\"); 2`] = `

Message:
> 1 | const buffer = new Buffer("string");
    |                ^^^^^^^^^^^^^^^^^^^^ \`new Buffer()\` is deprecated, use \`Buffer.from()\` instead.

Output:
  1 | const buffer = Buffer.from("string");

`;

exports[`no-new-buffer > invalid(17): const buffer = new Buffer(\"7468697320697320612074c3a97374\", \"hex\") 1`] = `

  1 | const buffer = new Buffer("7468697320697320612074c3a97374", "hex")

`;

exports[`no-new-buffer > invalid(17): const buffer = new Buffer(\"7468697320697320612074c3a97374\", \"hex\") 2`] = `

Message:
> 1 | const buffer = new Buffer("7468697320697320612074c3a97374", "hex")
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`new Buffer()\` is deprecated, use \`Buffer.from()\` instead.

Output:
  1 | const buffer = Buffer.from("7468697320697320612074c3a97374", "hex")

`;

exports[`no-new-buffer > invalid(18): const string = \"string\";\nconst buffer = new Buffer(string); 1`] = `

  1 | const string = "string";
  2 | const buffer = new Buffer(string);

`;

exports[`no-new-buffer > invalid(18): const string = \"string\";\nconst buffer = new Buffer(string); 2`] = `

Message:
  1 | const string = "string";
> 2 | const buffer = new Buffer(string);
    |                ^^^^^^^^^^^^^^^^^^ \`new Buffer()\` is deprecated, use \`Buffer.from()\` instead.

Output:
  1 | const string = "string";
  2 | const buffer = Buffer.from(string);

`;

exports[`no-new-buffer > invalid(19): const buffer = new Buffer(\`\${unknown}\`) 1`] = `

  1 | const buffer = new Buffer(\`\${unknown}\`)

`;

exports[`no-new-buffer > invalid(19): const buffer = new Buffer(\`\${unknown}\`) 2`] = `

Message:
> 1 | const buffer = new Buffer(\`\${unknown}\`)
    |                ^^^^^^^^^^^^^^^^^^^^^^^^ \`new Buffer()\` is deprecated, use \`Buffer.from()\` instead.

Output:
  1 | const buffer = Buffer.from(\`\${unknown}\`)

`;

exports[`no-new-buffer > invalid(2): const modes = new Set([\"foo\"]); modes.clear(); new Buffer((modes.size && \"x\") || value); 1`] = `

  1 | const modes = new Set(["foo"]); modes.clear(); new Buffer((modes.size && "x") || value);

`;

exports[`no-new-buffer > invalid(2): const modes = new Set([\"foo\"]); modes.clear(); new Buffer((modes.size && \"x\") || value); 2`] = `

Message:
> 1 | const modes = new Set(["foo"]); modes.clear(); new Buffer((modes.size && "x") || value);
    |                                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`new Buffer()\` is deprecated, use \`Buffer.alloc()\` or \`Buffer.from()\` instead.

Suggestion 1/2: Switch to \`Buffer.from()\`.:
  1 | const modes = new Set(["foo"]); modes.clear(); Buffer.from((modes.size && "x") || value);

Suggestion 2/2: Switch to \`Buffer.alloc()\`.:
  1 | const modes = new Set(["foo"]); modes.clear(); Buffer.alloc((modes.size && "x") || value);

`;

exports[`no-new-buffer > invalid(20): const buffer = new (Buffer)(unknown) 1`] = `

  1 | const buffer = new (Buffer)(unknown)

`;

exports[`no-new-buffer > invalid(20): const buffer = new (Buffer)(unknown) 2`] = `

Message:
> 1 | const buffer = new (Buffer)(unknown)
    |                ^^^^^^^^^^^^^^^^^^^^^ \`new Buffer()\` is deprecated, use \`Buffer.alloc()\` or \`Buffer.from()\` instead.

Suggestion 1/2: Switch to \`Buffer.from()\`.:
  1 | const buffer = (Buffer.from)(unknown)

Suggestion 2/2: Switch to \`Buffer.alloc()\`.:
  1 | const buffer = (Buffer.alloc)(unknown)

`;

exports[`no-new-buffer > invalid(21): const buffer = new Buffer(unknown, 2) 1`] = `

  1 | const buffer = new Buffer(unknown, 2)

`;

exports[`no-new-buffer > invalid(21): const buffer = new Buffer(unknown, 2) 2`] = `

Message:
> 1 | const buffer = new Buffer(unknown, 2)
    |                ^^^^^^^^^^^^^^^^^^^^^^ \`new Buffer()\` is deprecated, use \`Buffer.from()\` instead.

Output:
  1 | const buffer = Buffer.from(unknown, 2)

`;

exports[`no-new-buffer > invalid(22): const buffer = new Buffer(...unknown) 1`] = `

  1 | const buffer = new Buffer(...unknown)

`;

exports[`no-new-buffer > invalid(22): const buffer = new Buffer(...unknown) 2`] = `

Message:
> 1 | const buffer = new Buffer(...unknown)
    |                ^^^^^^^^^^^^^^^^^^^^^^ \`new Buffer()\` is deprecated, use \`Buffer.alloc()\` or \`Buffer.from()\` instead.

Suggestion 1/2: Switch to \`Buffer.from()\`.:
  1 | const buffer = Buffer.from(...unknown)

Suggestion 2/2: Switch to \`Buffer.alloc()\`.:
  1 | const buffer = Buffer.alloc(...unknown)

`;

exports[`no-new-buffer > invalid(23): () => {\n\treturn new // 1\n\t\tBuffer();\n} 1`] = `

  1 | () => {
  2 | 	return new // 1
  3 | 		Buffer();
  4 | }

`;

exports[`no-new-buffer > invalid(23): () => {\n\treturn new // 1\n\t\tBuffer();\n} 2`] = `

Message:
  1 | () => {
> 2 | 	return new // 1
    | 	       ^^^^^^^^
> 3 | 		Buffer();
    | ^^^^^^^^^^ \`new Buffer()\` is deprecated, use \`Buffer.from()\` instead.
  4 | }

Output:
  1 | () => {
  2 | 	return ( // 1
  3 | 		Buffer.from());
  4 | }

`;

exports[`no-new-buffer > invalid(24): () => {\n\treturn (\n\t\tnew // 2\n\t\t\tBuffer()\n\t);\n} 1`] = `

  1 | () => {
  2 | 	return (
  3 | 		new // 2
  4 | 			Buffer()
  5 | 	);
  6 | }

`;

exports[`no-new-buffer > invalid(24): () => {\n\treturn (\n\t\tnew // 2\n\t\t\tBuffer()\n\t);\n} 2`] = `

Message:
  1 | () => {
  2 | 	return (
> 3 | 		new // 2
    | 		^^^^^^^^
> 4 | 			Buffer()
    | ^^^^^^^^^^^ \`new Buffer()\` is deprecated, use \`Buffer.from()\` instead.
  5 | 	);
  6 | }

Output:
  1 | () => {
  2 | 	return (
  3 | 		// 2
  4 | 			Buffer.from()
  5 | 	);
  6 | }

`;

exports[`no-new-buffer > invalid(25): () => {\n\treturn new // 3\n\t\t(Buffer);\n} 1`] = `

  1 | () => {
  2 | 	return new // 3
  3 | 		(Buffer);
  4 | }

`;

exports[`no-new-buffer > invalid(25): () => {\n\treturn new // 3\n\t\t(Buffer);\n} 2`] = `

Message:
  1 | () => {
> 2 | 	return new // 3
    | 	       ^^^^^^^^
> 3 | 		(Buffer);
    | ^^^^^^^^^^ \`new Buffer()\` is deprecated, use \`Buffer.from()\` instead.
  4 | }

Output:
  1 | () => {
  2 | 	return ( // 3
  3 | 		(Buffer.from)());
  4 | }

`;

exports[`no-new-buffer > invalid(26): () => {\n\treturn new // 4\n\t\tBuffer;\n} 1`] = `

  1 | () => {
  2 | 	return new // 4
  3 | 		Buffer;
  4 | }

`;

exports[`no-new-buffer > invalid(26): () => {\n\treturn new // 4\n\t\tBuffer;\n} 2`] = `

Message:
  1 | () => {
> 2 | 	return new // 4
    | 	       ^^^^^^^^
> 3 | 		Buffer;
    | ^^^^^^^^ \`new Buffer()\` is deprecated, use \`Buffer.from()\` instead.
  4 | }

Output:
  1 | () => {
  2 | 	return ( // 4
  3 | 		Buffer.from());
  4 | }

`;

exports[`no-new-buffer > invalid(27): () => {\n\treturn (\n\t\tnew // 5\n\t\t\tBuffer\n\t);\n} 1`] = `

  1 | () => {
  2 | 	return (
  3 | 		new // 5
  4 | 			Buffer
  5 | 	);
  6 | }

`;

exports[`no-new-buffer > invalid(27): () => {\n\treturn (\n\t\tnew // 5\n\t\t\tBuffer\n\t);\n} 2`] = `

Message:
  1 | () => {
  2 | 	return (
> 3 | 		new // 5
    | 		^^^^^^^^
> 4 | 			Buffer
    | ^^^^^^^^^ \`new Buffer()\` is deprecated, use \`Buffer.from()\` instead.
  5 | 	);
  6 | }

Output:
  1 | () => {
  2 | 	return (
  3 | 		// 5
  4 | 			Buffer.from()
  5 | 	);
  6 | }

`;

exports[`no-new-buffer > invalid(28): () => {\n\treturn (\n\t\tnew // 6\n\t\t\t(Buffer)\n\t);\n} 1`] = `

  1 | () => {
  2 | 	return (
  3 | 		new // 6
  4 | 			(Buffer)
  5 | 	);
  6 | }

`;

exports[`no-new-buffer > invalid(28): () => {\n\treturn (\n\t\tnew // 6\n\t\t\t(Buffer)\n\t);\n} 2`] = `

Message:
  1 | () => {
  2 | 	return (
> 3 | 		new // 6
    | 		^^^^^^^^
> 4 | 			(Buffer)
    | ^^^^^^^^^^^ \`new Buffer()\` is deprecated, use \`Buffer.from()\` instead.
  5 | 	);
  6 | }

Output:
  1 | () => {
  2 | 	return (
  3 | 		// 6
  4 | 			(Buffer.from)()
  5 | 	);
  6 | }

`;

exports[`no-new-buffer > invalid(29): const buffer = new Buffer(10, 0); 1`] = `

  1 | const buffer = new Buffer(10, 0);

`;

exports[`no-new-buffer > invalid(29): const buffer = new Buffer(10, 0); 2`] = `

Message:
> 1 | const buffer = new Buffer(10, 0);
    |                ^^^^^^^^^^^^^^^^^ \`new Buffer()\` is deprecated, use \`Buffer.alloc()\` instead.

Output:
  1 | const buffer = Buffer.alloc(10);

`;

exports[`no-new-buffer > invalid(3): const alias = condition; var condition = true; new Buffer(alias ? \"x\" : 1); 1`] = `

  1 | const alias = condition; var condition = true; new Buffer(alias ? "x" : 1);

`;

exports[`no-new-buffer > invalid(3): const alias = condition; var condition = true; new Buffer(alias ? \"x\" : 1); 2`] = `

Message:
> 1 | const alias = condition; var condition = true; new Buffer(alias ? "x" : 1);
    |                                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`new Buffer()\` is deprecated, use \`Buffer.alloc()\` or \`Buffer.from()\` instead.

Suggestion 1/2: Switch to \`Buffer.from()\`.:
  1 | const alias = condition; var condition = true; Buffer.from(alias ? "x" : 1);

Suggestion 2/2: Switch to \`Buffer.alloc()\`.:
  1 | const alias = condition; var condition = true; Buffer.alloc(alias ? "x" : 1);

`;

exports[`no-new-buffer > invalid(30): const size = 10;\nconst buffer = new Buffer(size, 0); 1`] = `

  1 | const size = 10;
  2 | const buffer = new Buffer(size, 0);

`;

exports[`no-new-buffer > invalid(30): const size = 10;\nconst buffer = new Buffer(size, 0); 2`] = `

Message:
  1 | const size = 10;
> 2 | const buffer = new Buffer(size, 0);
    |                ^^^^^^^^^^^^^^^^^^^ \`new Buffer()\` is deprecated, use \`Buffer.alloc()\` instead.

Output:
  1 | const size = 10;
  2 | const buffer = Buffer.alloc(size);

`;

exports[`no-new-buffer > invalid(31): const buffer = new Buffer(10, 0, \"hex\"); 1`] = `

  1 | const buffer = new Buffer(10, 0, "hex");

`;

exports[`no-new-buffer > invalid(31): const buffer = new Buffer(10, 0, \"hex\"); 2`] = `

Message:
> 1 | const buffer = new Buffer(10, 0, "hex");
    |                ^^^^^^^^^^^^^^^^^^^^^^^^ \`new Buffer()\` is deprecated, use \`Buffer.alloc()\` instead.

Output:
  1 | const buffer = Buffer.alloc(10);

`;

exports[`no-new-buffer > invalid(32): const buffer = new Buffer(size, fill); 1`] = `

  1 | const buffer = new Buffer(size, fill);

`;

exports[`no-new-buffer > invalid(32): const buffer = new Buffer(size, fill); 2`] = `

Message:
> 1 | const buffer = new Buffer(size, fill);
    |                ^^^^^^^^^^^^^^^^^^^^^^ \`new Buffer()\` is deprecated, use \`Buffer.from()\` instead.

Output:
  1 | const buffer = Buffer.from(size, fill);

`;

exports[`no-new-buffer > invalid(33): const buffer = new Buffer(10, 0x62); 1`] = `

  1 | const buffer = new Buffer(10, 0x62);

`;

exports[`no-new-buffer > invalid(33): const buffer = new Buffer(10, 0x62); 2`] = `

Message:
> 1 | const buffer = new Buffer(10, 0x62);
    |                ^^^^^^^^^^^^^^^^^^^^ \`new Buffer()\` is deprecated, use \`Buffer.alloc()\` instead.

Output:
  1 | const buffer = Buffer.alloc(10);

`;

exports[`no-new-buffer > invalid(34): const buffer = new Buffer(10, 0x62, \"hex\"); 1`] = `

  1 | const buffer = new Buffer(10, 0x62, "hex");

`;

exports[`no-new-buffer > invalid(34): const buffer = new Buffer(10, 0x62, \"hex\"); 2`] = `

Message:
> 1 | const buffer = new Buffer(10, 0x62, "hex");
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`new Buffer()\` is deprecated, use \`Buffer.alloc()\` instead.

Output:
  1 | const buffer = Buffer.alloc(10);

`;

exports[`no-new-buffer > invalid(35): const buffer = new Buffer(10, fill); 1`] = `

  1 | const buffer = new Buffer(10, fill);

`;

exports[`no-new-buffer > invalid(35): const buffer = new Buffer(10, fill); 2`] = `

Message:
> 1 | const buffer = new Buffer(10, fill);
    |                ^^^^^^^^^^^^^^^^^^^^ \`new Buffer()\` is deprecated, use \`Buffer.alloc()\` instead.

Output:
  1 | const buffer = Buffer.alloc(10);

`;

exports[`no-new-buffer > invalid(36): const buffer = new Buffer(10, 65, \"utf8\"); 1`] = `

  1 | const buffer = new Buffer(10, 65, "utf8");

`;

exports[`no-new-buffer > invalid(36): const buffer = new Buffer(10, 65, \"utf8\"); 2`] = `

Message:
> 1 | const buffer = new Buffer(10, 65, "utf8");
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^ \`new Buffer()\` is deprecated, use \`Buffer.alloc()\` instead.

Output:
  1 | const buffer = Buffer.alloc(10);

`;

exports[`no-new-buffer > invalid(37): const buffer = new /* comment */ Buffer() 1`] = `

  1 | const buffer = new /* comment */ Buffer()

`;

exports[`no-new-buffer > invalid(37): const buffer = new /* comment */ Buffer() 2`] = `

Message:
> 1 | const buffer = new /* comment */ Buffer()
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^ \`new Buffer()\` is deprecated, use \`Buffer.from()\` instead.

Output:
  1 | const buffer = /* comment */ Buffer.from()

`;

exports[`no-new-buffer > invalid(38): const buffer = new /* comment */ Buffer 1`] = `

  1 | const buffer = new /* comment */ Buffer

`;

exports[`no-new-buffer > invalid(38): const buffer = new /* comment */ Buffer 2`] = `

Message:
> 1 | const buffer = new /* comment */ Buffer
    |                ^^^^^^^^^^^^^^^^^^^^^^^^ \`new Buffer()\` is deprecated, use \`Buffer.from()\` instead.

Output:
  1 | const buffer = /* comment */ Buffer.from()

`;

exports[`no-new-buffer > invalid(39): const buffer = new Buffer(10, /* fill byte */ 0xff); 1`] = `

  1 | const buffer = new Buffer(10, /* fill byte */ 0xff);

`;

exports[`no-new-buffer > invalid(39): const buffer = new Buffer(10, /* fill byte */ 0xff); 2`] = `

Message:
> 1 | const buffer = new Buffer(10, /* fill byte */ 0xff);
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`new Buffer()\` is deprecated, use \`Buffer.alloc()\` instead.

`;

exports[`no-new-buffer > invalid(4): const object = {value: true}; Object.defineProperty(object, \"value\", {get() { return false; }}); new Buffer(object.value ? \"x\" : value); 1`] = `

  1 | const object = {value: true}; Object.defineProperty(object, "value", {get() { return false; }}); new Buffer(object.value ? "x" : value);

`;

exports[`no-new-buffer > invalid(4): const object = {value: true}; Object.defineProperty(object, \"value\", {get() { return false; }}); new Buffer(object.value ? \"x\" : value); 2`] = `

Message:
> 1 | const object = {value: true}; Object.defineProperty(object, "value", {get() { return false; }}); new Buffer(object.value ? "x" : value);
    |                                                                                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`new Buffer()\` is deprecated, use \`Buffer.alloc()\` or \`Buffer.from()\` instead.

Suggestion 1/2: Switch to \`Buffer.from()\`.:
  1 | const object = {value: true}; Object.defineProperty(object, "value", {get() { return false; }}); Buffer.from(object.value ? "x" : value);

Suggestion 2/2: Switch to \`Buffer.alloc()\`.:
  1 | const object = {value: true}; Object.defineProperty(object, "value", {get() { return false; }}); Buffer.alloc(object.value ? "x" : value);

`;

exports[`no-new-buffer > invalid(40): const buffer = new Buffer(10, // fill byte\n\t0xff); 1`] = `

  1 | const buffer = new Buffer(10, // fill byte
  2 | 	0xff);

`;

exports[`no-new-buffer > invalid(40): const buffer = new Buffer(10, // fill byte\n\t0xff); 2`] = `

Message:
> 1 | const buffer = new Buffer(10, // fill byte
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 2 | 	0xff);
    | ^^^^^^ \`new Buffer()\` is deprecated, use \`Buffer.alloc()\` instead.

`;

exports[`no-new-buffer > invalid(41): const buffer = new Buffer(10, 0xff /* fill byte */); 1`] = `

  1 | const buffer = new Buffer(10, 0xff /* fill byte */);

`;

exports[`no-new-buffer > invalid(41): const buffer = new Buffer(10, 0xff /* fill byte */); 2`] = `

Message:
> 1 | const buffer = new Buffer(10, 0xff /* fill byte */);
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`new Buffer()\` is deprecated, use \`Buffer.alloc()\` instead.

`;

exports[`no-new-buffer > invalid(42): const buffer = new Buffer(10, 0xff, /* encoding */ \"hex\"); 1`] = `

  1 | const buffer = new Buffer(10, 0xff, /* encoding */ "hex");

`;

exports[`no-new-buffer > invalid(42): const buffer = new Buffer(10, 0xff, /* encoding */ \"hex\"); 2`] = `

Message:
> 1 | const buffer = new Buffer(10, 0xff, /* encoding */ "hex");
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`new Buffer()\` is deprecated, use \`Buffer.alloc()\` instead.

`;

exports[`no-new-buffer > invalid(43): const buffer = new Buffer(10 /* size */, 0xff); 1`] = `

  1 | const buffer = new Buffer(10 /* size */, 0xff);

`;

exports[`no-new-buffer > invalid(43): const buffer = new Buffer(10 /* size */, 0xff); 2`] = `

Message:
> 1 | const buffer = new Buffer(10 /* size */, 0xff);
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`new Buffer()\` is deprecated, use \`Buffer.alloc()\` instead.

Output:
  1 | const buffer = Buffer.alloc(10 /* size */);

`;

exports[`no-new-buffer > invalid(44): const buffer = new Buffer(10, getFill()); 1`] = `

  1 | const buffer = new Buffer(10, getFill());

`;

exports[`no-new-buffer > invalid(44): const buffer = new Buffer(10, getFill()); 2`] = `

Message:
> 1 | const buffer = new Buffer(10, getFill());
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^ \`new Buffer()\` is deprecated, use \`Buffer.alloc()\` instead.

`;

exports[`no-new-buffer > invalid(45): const buffer = new Buffer((10), (0)); 1`] = `

  1 | const buffer = new Buffer((10), (0));

`;

exports[`no-new-buffer > invalid(45): const buffer = new Buffer((10), (0)); 2`] = `

Message:
> 1 | const buffer = new Buffer((10), (0));
    |                ^^^^^^^^^^^^^^^^^^^^^ \`new Buffer()\` is deprecated, use \`Buffer.alloc()\` instead.

Output:
  1 | const buffer = Buffer.alloc((10));

`;

exports[`no-new-buffer > invalid(5): const modes = new Set([\"foo\"]); modes.clear(); new Buffer((modes.size ? 1 : \"x\") as string); 1`] = `

  1 | const modes = new Set(["foo"]); modes.clear(); new Buffer((modes.size ? 1 : "x") as string);

`;

exports[`no-new-buffer > invalid(5): const modes = new Set([\"foo\"]); modes.clear(); new Buffer((modes.size ? 1 : \"x\") as string); 2`] = `

Message:
> 1 | const modes = new Set(["foo"]); modes.clear(); new Buffer((modes.size ? 1 : "x") as string);
    |                                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`new Buffer()\` is deprecated, use \`Buffer.alloc()\` or \`Buffer.from()\` instead.

Suggestion 1/2: Switch to \`Buffer.from()\`.:
  1 | const modes = new Set(["foo"]); modes.clear(); Buffer.from((modes.size ? 1 : "x") as string);

Suggestion 2/2: Switch to \`Buffer.alloc()\`.:
  1 | const modes = new Set(["foo"]); modes.clear(); Buffer.alloc((modes.size ? 1 : "x") as string);

`;

exports[`no-new-buffer > invalid(6): const buffer = new Buffer([0x62, 0x75, 0x66, 0x66, 0x65, 0x72]) 1`] = `

  1 | const buffer = new Buffer([0x62, 0x75, 0x66, 0x66, 0x65, 0x72])

`;

exports[`no-new-buffer > invalid(6): const buffer = new Buffer([0x62, 0x75, 0x66, 0x66, 0x65, 0x72]) 2`] = `

Message:
> 1 | const buffer = new Buffer([0x62, 0x75, 0x66, 0x66, 0x65, 0x72])
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`new Buffer()\` is deprecated, use \`Buffer.from()\` instead.

Output:
  1 | const buffer = Buffer.from([0x62, 0x75, 0x66, 0x66, 0x65, 0x72])

`;

exports[`no-new-buffer > invalid(7): const buffer = new Buffer([0x62, bar]) 1`] = `

  1 | const buffer = new Buffer([0x62, bar])

`;

exports[`no-new-buffer > invalid(7): const buffer = new Buffer([0x62, bar]) 2`] = `

Message:
> 1 | const buffer = new Buffer([0x62, bar])
    |                ^^^^^^^^^^^^^^^^^^^^^^^ \`new Buffer()\` is deprecated, use \`Buffer.from()\` instead.

Output:
  1 | const buffer = Buffer.from([0x62, bar])

`;

exports[`no-new-buffer > invalid(8): const array = [0x62];\nconst buffer = new Buffer(array); 1`] = `

  1 | const array = [0x62];
  2 | const buffer = new Buffer(array);

`;

exports[`no-new-buffer > invalid(8): const array = [0x62];\nconst buffer = new Buffer(array); 2`] = `

Message:
  1 | const array = [0x62];
> 2 | const buffer = new Buffer(array);
    |                ^^^^^^^^^^^^^^^^^ \`new Buffer()\` is deprecated, use \`Buffer.from()\` instead.

Output:
  1 | const array = [0x62];
  2 | const buffer = Buffer.from(array);

`;

exports[`no-new-buffer > invalid(9): const arrayBuffer = new ArrayBuffer(10);\nconst buffer = new Buffer(arrayBuffer); 1`] = `

  1 | const arrayBuffer = new ArrayBuffer(10);
  2 | const buffer = new Buffer(arrayBuffer);

`;

exports[`no-new-buffer > invalid(9): const arrayBuffer = new ArrayBuffer(10);\nconst buffer = new Buffer(arrayBuffer); 2`] = `

Message:
  1 | const arrayBuffer = new ArrayBuffer(10);
> 2 | const buffer = new Buffer(arrayBuffer);
    |                ^^^^^^^^^^^^^^^^^^^^^^^ \`new Buffer()\` is deprecated, use \`Buffer.alloc()\` or \`Buffer.from()\` instead.

Suggestion 1/2: Switch to \`Buffer.from()\`.:
  1 | const arrayBuffer = new ArrayBuffer(10);
  2 | const buffer = Buffer.from(arrayBuffer);

Suggestion 2/2: Switch to \`Buffer.alloc()\`.:
  1 | const arrayBuffer = new ArrayBuffer(10);
  2 | const buffer = Buffer.alloc(arrayBuffer);

`;
